tests/neg/operators/str-00.ts

/*@ baz :: () => {v: string | v = "dog"} */
function baz(){
  let z = 'cat';
  return z;
}

